--- a/app.yaml
+++ b/app.yaml
@@ -8,3 +8,16 @@ resources:
   cpu: 1
   memory_gb: 0.5
   disk_size_gb: 10
+
+liveness_check:
+  check_interval_sec: 60
+  timeout_sec: 10
+  failure_threshold: 2
+  success_threshold: 2
+
+readiness_check:
+  check_interval_sec: 20
+  timeout_sec: 10
+  failure_threshold: 2
+  success_threshold: 2
+  app_start_timeout_sec: 300
