--- a/app.yaml
+++ b/app.yaml
@@ -1,8 +1,10 @@
 runtime: custom
+env: flex
 
 service: buff163-scraper
 
-env: flex
+manual_scaling:
+  instances: 1
 
 env_variables: 
   JWT_SECRET: A98DB973KWL8XP1LZ94KJF0
