--- a/app.yaml
+++ b/app.yaml
@@ -1,10 +1,6 @@
 runtime: custom
+#service: buff163-scraper
 env: flex
-
-service: buff163-scraper
-
-manual_scaling:
-  instances: 1
 
 env_variables: 
   JWT_SECRET: A98DB973KWL8XP1LZ94KJF0
