JWT secret added to env var

--- a/app.yaml
+++ b/app.yaml
@@ -3,7 +3,7 @@ service: buff163-scraper
 env: flex
 
 env_variables: 
-  JWT_SECRET: A98DB973KWL8XP1LZ94KJF0
+  JWT_SECRET: $JWT_SECRET #A98DB973KWL8XP1LZ94KJF0
 
 resources:
   cpu: 1
