--- a/app.yaml
+++ b/app.yaml
@@ -5,7 +5,10 @@ env: flex
 env_variables: 
   JWT_SECRET: $JWT_SECRET
 
+manual_scaling:
+  instances: 1
+
 resources:
-  cpu: 1
-  memory_gb: 0.5
+  cpu: 0.2
+  memory_gb: 0.6
   disk_size_gb: 10
