--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "build": "nest build",
 
-    "build:digitalocean": "npm install && npx playwright install --with-deps && npm run build && npm ci",
+    "build:digitalocean": "npm install && npm run playwright_install && npm run build && npm ci",
+    "playwright_install": "npx playwright install chromium",
 
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
