Add engine and build commands back

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "build": "nest build",
 
+    "build:digitalocean": "npm install --production=false && npm run build && npm ci && npx playwright install --with-deps",
     "playwright_install": "npx playwright install chromium && npx playwright install-deps",
 
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -21,6 +22,10 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
+  "engines": {
+    "node": "18.18.2",
+    "npm": "10.2.5"
   },
   "dependencies": {
     "@nestjs/cli": "^10.0.0",
