--- a/.gitignore
+++ b/.gitignore
@@ -11,11 +11,10 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
-# Playwright screenshots
-*.png
-
 # .env
 .env
+
+.package-lock.json
 
 # OS
 .DS_Store
