--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/serve-static": "^4.0.0",
     "@nestjs/swagger": "^7.1.17",
+    "@playwright/browser-chromium": "^1.40.1",
     "cookie-parser": "^1.4.6",
     "hbs": "^4.2.0",
     "playwright": "^1.40.1",
-    "playwright-chromium": "^1.40.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
