--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  
   "engines": {
     "node": "20"
   },
@@ -37,6 +38,7 @@
     "cookie-parser": "^1.4.6",
     "hbs": "^4.2.0",
     "playwright": "^1.40.1",
+    "playwright-chromium": "^1.40.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
