--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "node": "20"
   },
   "scripts": {
-    "build": "nest build",
+    "build": "npx install playwright chromium --with-deps && nest build",
+    
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
