--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "node": "20"
   },
   "scripts": {
-    "build": "npx install playwright chromium --with-deps && nest build",
-    
+    "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
