remove known_hosts command

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,8 +4,6 @@ before_script:
     - echo "$SSH_PRIVATE_KEY" | tr -d '\r' | ssh-add -
     - mkdir -p ~/.ssh
     - chmod 700 ~/.ssh
-    - cp "$SSH_KNOWN_HOSTS" ~/.ssh/known_hosts
-    - chmod 644 ~/.ssh/known_hosts
     - echo "$SSH_PRIVATE_KEY" >> ~/.ssh/id_rsa
 
 stages:
@@ -21,4 +19,4 @@ docker-image:
     - docker build -t scraper-image .
     - docker tag scraper-image registry.digitalocean.com/buff163-scraper-registry/scraper-image
     - docker push registry.digitalocean.com/buff163-scraper-registry/scraper-image
-    - ssh root@$DROPLET_IP "docker login -u "$DOCKER_PASSWORD" -p "$DOCKER_PASSWORD" registry.digitalocean.com && docker stop scraper-container && docker rm $(docker ps --filter status=exited -q) && docker pull DOCKER_IMAGE && docker run -d --name scraper-container --restart always -p 3000:3000 $DOCKER_IMAGE_NAME"
+    - ssh root@$DROPLET_IP "docker login -u "$DOCKER_PASSWORD" -p "$DOCKER_PASSWORD" registry.digitalocean.com && docker stop scraper-container && docker rm $(docker ps --filter status=exited -q) && docker pull registry.digitalocean.com/buff163-scraper-registry/scraper-image && docker run -d --name scraper-container --restart always -p 3000:3000 scraper-image"
