--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,6 +24,6 @@ deploy-job:
     - docker tag scraper-image registry.digitalocean.com/buff163-scraper-registry/scraper-image
     - docker push registry.digitalocean.com/buff163-scraper-registry/scraper-image
     - ssh root@$DROPLET_IP "docker login -u '$DOCKER_PASSWORD' -p '$DOCKER_PASSWORD' registry.digitalocean.com && 
-                            docker rm -f $(docker ps -a -q) &&
+                            docker ps -aq | xargs docker rm -f &&
                             docker pull registry.digitalocean.com/buff163-scraper-registry/scraper-image:latest && 
                             docker run -d --name scraper-container --restart always -p 3000:3000 scraper-image"
