--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@nestjs/schedule": "^4.0.0",
     "@nestjs/swagger": "^7.1.17",
     "cookie-parser": "^1.4.6",
+    "node-os-utils": "^1.3.7",
     "playwright": "^1.40.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
