--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "^7.1.17",
     "cookie-parser": "^1.4.6",
     "rxjs": "^7.8.1"
