Added proxies to the scraper

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "^7.1.17",
     "cookie-parser": "^1.4.6",
+    "https-proxy-agent": "^7.0.3",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
