--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,4 +26,4 @@ deploy-service:
     - ssh root@$DROPLET_IP "docker login -u '$DOCKER_PASSWORD' -p '$DOCKER_PASSWORD' registry.digitalocean.com && 
                             docker ps -aq | xargs docker rm -f &&
                             docker pull registry.digitalocean.com/buff163-scraper-registry/scraper-image && 
-                            docker run -d --name scraper-container -e PROXIES="$PROXIES" --restart always -p 3000:3000 registry.digitalocean.com/buff163-scraper-registry/scraper-image"
+                            docker run -d --name scraper-container --env PROXIES="$PROXIES" --restart always -p 3000:3000 registry.digitalocean.com/buff163-scraper-registry/scraper-image"
