--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/swagger": "^7.1.17",
     "cookie-parser": "^1.4.6",
     "https-proxy-agent": "^7.0.3",
+    "lodash": "^4.17.21",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
