--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
+    "@nestjs/mongoose": "^10.0.4",
     "@nestjs/schedule": "^4.0.1",
     "@nestjs/swagger": "^7.1.17",
     "cookie-parser": "^1.4.6",
     "https-proxy-agent": "^7.0.3",
     "lodash": "^4.17.21",
+    "mongoose": "^8.2.0",
     "rxjs": "^7.8.1"
   },
   "devDependencies": {
